--- a/less.less
+++ b/less.less
@@ -1,20 +1,37 @@
 body{
     main{
         div.wiersz{
-            @media (max-width:500px){
-                margin-left: 5px;
-                margin-right: 5px;
+            margin-left: 5px;
+            margin-right: 5px;
+            margin-top: 5px; 
+            div.podwiersz{
+                flex-wrap: wrap;
+            } 
+            div.informacje{
                 margin-top: 5px;
-            }   
+                border-radius: 5px;
+                display: flex;
+                align-items: center;
+                p{
+                    padding: 10px;
+                }
+            }
         }
         p.trescProduktow{
-            @media (max-width:500px){
+            @media (max-width:576px){
             font-size: 11px;
             }
+        }
+        @media (min-width:576px) and (max-width:992px){
+            width: 600px;
+            margin: 0px auto;
+        }
+        @media (min-width:993px){
+            width: 960px;
+            margin: 0px auto;
         }
     }
     footer{
         margin-top: 5px;
     }
-    
 }
