--- a/less.less
+++ b/less.less
@@ -1,5 +1,8 @@
 body{
     main{
+        width: 100%;
+        max-width:960px;
+        margin: 0px auto;
         div.wiersz{
             margin-left: 5px;
             margin-right: 5px;
@@ -18,17 +21,7 @@ body{
             }
         }
         p.trescProduktow{
-            @media (max-width:576px){
             font-size: 11px;
-            }
-        }
-        @media (min-width:576px) and (max-width:992px){
-            width: 600px;
-            margin: 0px auto;
-        }
-        @media (min-width:993px){
-            width: 960px;
-            margin: 0px auto;
         }
     }
     footer{
